# cpputesimportmoderncmake

./: CMakeLists.txt  README.md
src/: lib.c
test/: main.cpp  test.cpp
